{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 27,
  "lineage": "7e688921-6670-8c4f-f72c-b29479288033",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Elastic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb822f1f4ee26c12",
            "association_id": "eipassoc-0c336ad48345c7e16",
            "domain": "vpc",
            "id": "eipalloc-0bb822f1f4ee26c12",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0d8773c0a43742f96",
            "private_dns": "ip-10-0-0-8.us-east-2.compute.internal",
            "private_ip": "10.0.0.8",
            "public_dns": "ec2-3-12-48-120.us-east-2.compute.amazonaws.com",
            "public_ip": "3.12.48.120",
            "public_ipv4_pool": "amazon",
            "tags": {
              "name": "Elastic-1"
            },
            "tags_all": {
              "name": "Elastic-1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Apache-aws_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08778753ef37aa408",
            "arn": "arn:aws:ec2:us-east-2:846265604884:instance/i-01715152a48a3667d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01715152a48a3667d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07ac11b15bc37b780",
            "private_dns": "ip-172-31-6-215.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.6.215",
            "public_dns": "ec2-18-222-164-139.us-east-2.compute.amazonaws.com",
            "public_ip": "18.222.164.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01bf3800e0272a546",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04c7b086fb7bcf5e7",
            "tags": {
              "Name": "Apache-Instance"
            },
            "tags_all": {
              "Name": "Apache-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0caede2d148a6cc72"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846265604884:internet-gateway/igw-0677ec664ed29ed66",
            "id": "igw-0677ec664ed29ed66",
            "owner_id": "846265604884",
            "tags": {
              "name": "Gateway-1"
            },
            "tags_all": {
              "name": "Gateway-1"
            },
            "vpc_id": "vpc-0b2e3830ceea1dbc3"
          },
          "dependencies": [
            "aws_vpc.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT-GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb822f1f4ee26c12",
            "connectivity_type": "public",
            "id": "nat-0f693d0f3f0123b5c",
            "network_interface_id": "eni-0d8773c0a43742f96",
            "private_ip": "10.0.0.8",
            "public_ip": "3.12.48.120",
            "subnet_id": "subnet-02d50effab2d37790",
            "tags": {
              "name": "NAT_GW"
            },
            "tags_all": {
              "name": "NAT_GW"
            }
          },
          "dependencies": [
            "aws_eip.Elastic1",
            "aws_subnet.Pub-Subnet",
            "aws_vpc.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Pri-Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846265604884:route-table/rtb-09573bc5049211125",
            "id": "rtb-09573bc5049211125",
            "owner_id": "846265604884",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f693d0f3f0123b5c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b2e3830ceea1dbc3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Elastic1",
            "aws_nat_gateway.NAT-GW",
            "aws_subnet.Pub-Subnet",
            "aws_vpc.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846265604884:route-table/rtb-08deebb0680bc84be",
            "id": "rtb-08deebb0680bc84be",
            "owner_id": "846265604884",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0677ec664ed29ed66",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "Route-1"
            },
            "tags_all": {
              "name": "Route-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2e3830ceea1dbc3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.GW",
            "aws_vpc.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052e11469fb946c50",
            "route_table_id": "rtb-09573bc5049211125",
            "subnet_id": "subnet-0d65b301f2fca642c"
          },
          "dependencies": [
            "aws_eip.Elastic1",
            "aws_nat_gateway.NAT-GW",
            "aws_route_table.Pri-Route",
            "aws_subnet.Pri-Subnet",
            "aws_subnet.Pub-Subnet",
            "aws_vpc.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5cee1957f9e02e8",
            "route_table_id": "rtb-09573bc5049211125",
            "subnet_id": "subnet-063d0428fe47c53cf"
          },
          "dependencies": [
            "aws_eip.Elastic1",
            "aws_nat_gateway.NAT-GW",
            "aws_route_table.Pri-Route",
            "aws_subnet.Pri-Subnet2",
            "aws_subnet.Pub-Subnet",
            "aws_vpc.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-Associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07607813ee638ff87",
            "route_table_id": "rtb-08deebb0680bc84be",
            "subnet_id": "subnet-02d50effab2d37790"
          },
          "dependencies": [
            "aws_internet_gateway.GW",
            "aws_route_table.RT",
            "aws_subnet.Pub-Subnet",
            "aws_vpc.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-Associate2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0941e7142cf767227",
            "route_table_id": "rtb-08deebb0680bc84be",
            "subnet_id": "subnet-0b896591c26e7c3fb"
          },
          "dependencies": [
            "aws_internet_gateway.GW",
            "aws_route_table.RT",
            "aws_subnet.Pub-Subnet2",
            "aws_vpc.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Pri-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846265604884:subnet/subnet-0d65b301f2fca642c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.32/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d65b301f2fca642c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "846265604884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "task3"
            },
            "tags_all": {
              "name": "task3"
            },
            "vpc_id": "vpc-0b2e3830ceea1dbc3"
          },
          "dependencies": [
            "aws_vpc.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Pri-Subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846265604884:subnet/subnet-063d0428fe47c53cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.48/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063d0428fe47c53cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "846265604884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "task4"
            },
            "tags_all": {
              "name": "task4"
            },
            "vpc_id": "vpc-0b2e3830ceea1dbc3"
          },
          "dependencies": [
            "aws_vpc.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Pub-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846265604884:subnet/subnet-02d50effab2d37790",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d50effab2d37790",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "846265604884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "task1"
            },
            "tags_all": {
              "name": "task1"
            },
            "vpc_id": "vpc-0b2e3830ceea1dbc3"
          },
          "dependencies": [
            "aws_vpc.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Pub-Subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846265604884:subnet/subnet-0b896591c26e7c3fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b896591c26e7c3fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "846265604884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "task2"
            },
            "tags_all": {
              "name": "task2"
            },
            "vpc_id": "vpc-0b2e3830ceea1dbc3"
          },
          "dependencies": [
            "aws_vpc.task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:846265604884:vpc/vpc-0b2e3830ceea1dbc3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0df06c5c576d5922b",
            "default_route_table_id": "rtb-0efa477308c123550",
            "default_security_group_id": "sg-02f7cdaac0f3e71ec",
            "dhcp_options_id": "dopt-019a13dcf660e0184",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b2e3830ceea1dbc3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0efa477308c123550",
            "owner_id": "846265604884",
            "tags": {
              "name": "TaskVPC"
            },
            "tags_all": {
              "name": "TaskVPC"
            }
          }
        }
      ]
    }
  ]
}